Adicionada sessão Redações Comentadas na index e criada 10 páginas contendo cada redação e seus respectivos comentários

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,12 @@
       background-color: #f2cbf4;
     }
 
+    .legenda{
+      height: 25px;
+      width: 25px;
+      border-radius: 12px;
+    }
+
 /*CLASSES PARA DIVS*/
     .container.box{
       background-color: #FFFFFF !important;
